# KPU-Simulator

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  QUICK_START.md  README.md  README_dev.md  cmake_build_with_venv.bat  cmake_gui_setup.bat  conda_setup.bat  dev_setup_unix.sh  dev_setup_windows.bat  how-to-run-python-application.md  how_to_setup_pybind_venv.txt  l3_focused_analysis.csv  loading_python_bindings.md  pyproject.toml  python_path.ps  python_path.sh  rebuild_python.cmd  requirements.txt  test_dma_python.py
benchmarks/: CMakeLists.txt
components/: CMakeLists.txt  README.md
components/compute/: CMakeLists.txt
components/fabric/: CMakeLists.txt
components/memory/: CMakeLists.txt
examples/: CMakeLists.txt
examples/basic/: CMakeLists.txt  concurrent_execution_debug.cpp  config_formatter_demo.cpp  data_movement_isa_matmul.cpp  data_movement_pipeline.cpp  data_movement_schedule.txt  hello_kpu.cpp  matrix_multiply.cpp  memory_management.cpp  system_config_demo.cpp  tile_layout_test.cpp
examples/compiler/: CMakeLists.txt  dataflow_strategy.cpp  hardware_design_explorer.cpp  hardware_design_space.csv  l2_tile_scheduler_demo.cpp  l3_comprehensive_analysis.cpp  l3_focused_analysis.cpp  l3_overfetch_analyzer.cpp  l3_transformer_analysis.cpp  schedule_characterizer_demo.cpp  schedule_generator_demo.cpp  tile_optimizer_demo.cpp
examples/python/: README.md  address_based_dma_example.py  generate.py
examples/python/baseline/: basic_sim_pattern.py  core_features_demo.py  show_np_config.py  simple_kpu.py
examples/python/educational/: matrix_chain_demo.py  neural_network_demo.py  performance_scaling.py
models/: CMakeLists.txt  README.md
models/kpu/: CMakeLists.txt  README_autonomous.md  autonomous_orchestrator.hpp  host_T2_KPU.cpp  host_T2_KPU_single_block_matmul.cpp  host_t100.cpp  host_t100_autonomous.cpp  host_t100_single_tile.cpp  kpu_profiler.hpp  matmul_tiled_autonomous.cpp  test_debug_dataflow.cpp
packaging/: CMakeLists.txt
src/: CMakeLists.txt
src/assembly/: INSTRUCTION_REFERENCE.md  Makefile  README.md  SIDE_BY_SIDE_COMPARISON.md
src/assembly/arm/: mlp_neon_aarch64.s  mlp_neon_armv7.s
src/assembly/gpu/: GPU_COMPARISON.md  GPU_README.md  Makefile
src/assembly/include/: mlp_asm.h
src/assembly/kpu/: KPU_README.md
src/assembly/src/: example.c
src/assembly/tpu/: SYSTOLIC_ARRAY_EXPLAINED.md  TPU_README.md
src/assembly/x86_64/: mlp_avx.s
src/bindings/: CMakeLists.txt
src/bindings/c/: CMakeLists.txt  kpu_c_api.cpp  kpu_c_api.h
src/bindings/python/: CMakeLists.txt  __init__.py  kpu_bindings.cpp  simulator_bindings.cpp  stillwater_toplevel_bindings.cpp  toplevel_bindings.cpp
src/compiler/: CMakeLists.txt  graph_loader.cpp  input_stationary.md  l2_tile_scheduler.cpp  l3_modeling.md  l3_overfetch_bug.md  l3_scheduler.cpp  schedule_characterizer.cpp  schedule_generator.cpp  tile_optimizer.cpp  weight_stationary.md  weight_stationary_status.md
src/components/: CMakeLists.txt
src/components/compute/: CMakeLists.txt  compute_fabric.cpp  matmul_tau111_s001.cpp  systolic_array.cpp
src/components/datamovement/: CMakeLists.txt  block_mover.cpp  dma_engine.cpp  streamer.cpp
src/components/interconnect/: CMakeLists.txt  block_mover.cpp  dma_engine.cpp
src/components/memory/: CMakeLists.txt  address_decoder.cpp  buffet.cpp  buffet_integration.cpp  cache.cpp  external_memory.cpp  l1_buffer.cpp  l2_bank.cpp  l3_tile.cpp  memory_map.cpp  (+5 more)
src/driver/: CMakeLists.txt  memory_manager.cpp
src/isa/: CMakeLists.txt  concurrent_executor.cpp  data_movement_isa.cpp  program_executor.cpp  tile_layout.cpp
src/memory/: CMakeLists.txt  memory_manager.cpp  scratchpad.cpp
src/simulator/: CMakeLists.txt  kpu_simulator.cpp
src/system/: CMakeLists.txt  config_formatter.cpp  config_loader.cpp  pcie_arbiter.cpp  system_config.cpp  toplevel.cpp
src/trace/: CMakeLists.txt  trace_entry.cpp
tests/: CMakeLists.txt  catch2-cli.txt  python_test.py  test_main.cpp  test_python.old  test_python.py
tests/benchmarks/: CMakeLists.txt
tests/block_mover/: CMakeLists.txt  design.md  test_block_mover_basic.cpp  test_block_mover_tracing.cpp
tests/buffet/: CMakeLists.txt  test_buffet_basic.cpp  test_buffet_performance.cpp  test_eddo_workflow.cpp  test_orchestrator_basic.cpp  test_orchestrator_performance.cpp
tests/compiler/: CMakeLists.txt  test_graph_loader.cpp  test_l2_tile_scheduler.cpp  test_schedule_generator.cpp  test_tile_optimizer.cpp
tests/compute/: CMakeLists.txt  test_compute_basic.cpp  test_compute_fabric_tracing.cpp  test_matmul_tau111_s001.cpp  test_systolic_array.cpp
tests/dma/: CMakeLists.txt  README.md  design.md  test_dma_address_based.cpp  test_dma_basic.cpp  test_dma_debug.cpp  test_dma_performance.cpp  test_dma_tensor_movement.cpp
tests/driver/: CMakeLists.txt  test_memory_alignment.cpp  test_memory_allocation.cpp  test_memory_pool.cpp
tests/integration/: CMakeLists.txt  test_end_to_end.cpp  test_multi_component.cpp  test_python_cpp_integration.cpp
tests/isa/: CMakeLists.txt  test_data_movement_isa.cpp
tests/memory/: CMakeLists.txt  test_external_memory_sparse.cpp  test_memory_alignment.cpp  test_memory_allocation.cpp  test_memory_map.cpp  test_memory_map_debug.cpp  test_memory_pool.cpp  test_sparse_memory.cpp
tests/python/: test_toplevel_simulator.py
tests/storage/: CMakeLists.txt  test_eddo_workflow.cpp  test_storage_scheduler_performance.cpp
tests/streamer/: CMakeLists.txt  test_streamer_basic.cpp  test_streamer_tracing.cpp
tests/system/: CMakeLists.txt  test_config_formatting.cpp  test_system_config.cpp  test_toplevel_simulator.cpp
tests/systolic_array/: CMakeLists.txt
tests/trace/: CMakeLists.txt  test_dma_tracing.cpp
tools/compiler/: CMakeLists.txt  README.md  generate_pareto_graphs.sh  pyproject.toml  test_matmul_tiling.py  tiling_assessment.py  visualize_hardware_design_space.py  visualize_l3_overfetch.py  visualize_pareto_frontier.py
tools/cpp/: CMakeLists.txt
tools/python/: CMakeLists.txt  dev_setup.py  distributed_sequencer.py  kpu_demo.ipynb  kpu_visualizer.py  pyproject.toml  setup.py
(+228 files in other folders)
