# pyproject.toml 
# Modern Python packaging configuration for KPU Simulator

[build-system]
requires = ["setuptools>=45", "wheel", "pybind11>=2.10.0", "numpy", "cmake>=3.20"]
build-backend = "setuptools.build_meta"

[project]
name = "stillwater-kpu-simulator"
version = "0.1.0"
description = "Stillwater Knowledge Processing Unit Simulator with TopLevelSimulator"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Stillwater Supercomputing", email = "info@stillwater-sc.com"}
]
keywords = ["simulation", "hardware", "high-performance-computing", "linear-algebra", "kpu", "orchestration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",  
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black>=21.0",
    "flake8>=3.9", 
    "mypy>=0.910",
]
viz = [
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "plotly>=5.0",
]
jupyter = [
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.0",
    "notebook>=6.4.0",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
]
all = [
    "stillwater-kpu-simulator[dev,viz,jupyter,docs]"
]

[project.urls]
Homepage = "https://github.com/stillwater-sc/kpu-simulator"
Documentation = "https://stillwater-kpu.github.io/domain-flow/"
Repository = "https://github.com/stillwater-sc/kpu-simulator.git"
Issues = "https://github.com/stillwater-sc/kpu-simulator/issues"

[tool.setuptools.packages.find]
where = ["src/bindings/python"]
include = ["*"]
namespaces = false

[tool.setuptools.package-data]
"*" = ["*.so", "*.pyd", "*.dll", "*.cp*"]

# Package directory mapping
[tool.setuptools.package-dir]
"" = "src/bindings/python"

# Explicitly include the built extension
[tool.setuptools]
include-package-data = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Relaxed for bindings